k8s_manifest/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ramesh0621/backend-1:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: mysql-ca
              mountPath: /etc/ca
              readOnly: true
      volumes:
        - name: mysql-ca
          secret:
            secretName: mysql-tls
