k8s_manifest/db_statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: tls
              mountPath: /etc/mysql/tls
              readOnly: true
            - name: config
              mountPath: /etc/mysql/mysql.conf.d
              readOnly: true
      volumes:
        - name: mysql-init
          configMap:
            name: mysql-init-sql
        - name: mysql-data
          emptyDir: {}
        - name: tls
          secret:
            secretName: mysql-tls-secret
        - name: config
          configMap:
            name: mysql-config
